--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -19,6 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\engine.cpp" />
+    <ClCompile Include="src\errorhandling.cpp" />
     <ClCompile Include="src\camera.cpp" />
     <ClCompile Include="src\exceptions.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -31,6 +33,8 @@
     <ClCompile Include="src\texture.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\engine.h" />
+    <ClInclude Include="src\errorhandling.h" />
     <ClInclude Include="src\camera.h" />
     <ClInclude Include="src\exceptions.h" />
     <ClInclude Include="src\matrix.h" />
