--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -19,6 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <None Include="shaders\fragmentPBR.frag">
+      <FileType>Document</FileType>
+    </None>
     <ClCompile Include="src\engine.cpp" />
     <ClCompile Include="src\errorhandling.cpp" />
     <ClCompile Include="src\camera.cpp" />
