--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <None Include="shaders\fragmentPBR.frag">
+    <None Include="shaders\fragment.frag">
       <FileType>Document</FileType>
     </None>
     <ClCompile Include="src\engine.cpp" />
@@ -50,7 +50,6 @@
     <ClInclude Include="src\texture.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="shaders\fragment.frag" />
     <None Include="shaders\vertex.vert" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
