--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\model.cpp" />
+    <ClCompile Include="src\skybox.cpp" />
     <ClCompile Include="src\engine.cpp" />
     <ClCompile Include="src\errorhandling.cpp" />
     <ClCompile Include="src\camera.cpp" />
@@ -28,6 +28,7 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\matrix.cpp" />
     <ClCompile Include="src\meshloading.cpp" />
+    <ClCompile Include="src\pbrmodel.cpp" />
     <ClCompile Include="src\quad2d.cpp" />
     <ClCompile Include="src\quaternion.cpp" />
     <ClCompile Include="src\scenegraph.cpp" />
@@ -36,7 +37,9 @@
     <ClCompile Include="src\texture.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\model.h" />
+    <ClInclude Include="src\skybox.h" />
+    <ClInclude Include="src\drawable.h" />
+    <ClInclude Include="src\pbrmodel.h" />
     <ClInclude Include="src\engine.h" />
     <ClInclude Include="src\errorhandling.h" />
     <ClInclude Include="src\camera.h" />
@@ -72,6 +75,8 @@
     <None Include="shaders\LIGHT_fragment.frag" />
     <None Include="shaders\LIGHT_vertex.vert" />
     <None Include="shaders\POSTPROCESS_fragment.frag" />
+    <None Include="shaders\skybox.frag" />
+    <None Include="shaders\skybox.vert" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets\**\*.*">
