--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -86,6 +86,7 @@
       <DeploymentContent>true</DeploymentContent>
       <FileType>Document</FileType>
     </CopyFileToFolders>
+    <None Include="imgui.ini" />
     <None Include="shaders\bloom_blend.frag" />
     <None Include="shaders\bloom_separation.frag" />
     <None Include="shaders\blur_horizontal.frag" />
