add irradiance map computation

--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\meshfactory.cpp" />
+    <None Include="shaders\cubemapConvolution.frag" />
     <None Include="shaders\equirectToCubemap.vert">
       <FileType>Document</FileType>
     </None>
