--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -22,6 +22,7 @@
     <None Include="shaders\prefilterMapConvolution.frag">
       <FileType>Document</FileType>
     </None>
+    <ClCompile Include="src\mesh.cpp" />
     <ClCompile Include="src\meshfactory.cpp" />
     <None Include="shaders\irradianceMapConvolution.frag" />
     <None Include="shaders\equirectToCubemap.vert">
@@ -52,6 +53,7 @@
     <ClCompile Include="src\texture.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\mesh.h" />
     <ClInclude Include="src\meshfactory.h" />
     <ClInclude Include="src\imgui\imconfig.h" />
     <ClInclude Include="src\imgui\imgui.h" />
