--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -19,15 +19,6 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <None Include="shaders\prefilterMapConvolution.frag">
-      <FileType>Document</FileType>
-    </None>
-    <ClCompile Include="src\mesh.cpp" />
-    <ClCompile Include="src\meshfactory.cpp" />
-    <None Include="shaders\irradianceMapConvolution.frag" />
-    <None Include="shaders\equirectToCubemap.vert">
-      <FileType>Document</FileType>
-    </None>
     <ClCompile Include="src\imgui\imgui.cpp" />
     <ClCompile Include="src\imgui\imgui_demo.cpp" />
     <ClCompile Include="src\imgui\imgui_draw.cpp" />
@@ -35,6 +26,8 @@
     <ClCompile Include="src\imgui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="src\imgui\imgui_tables.cpp" />
     <ClCompile Include="src\imgui\imgui_widgets.cpp" />
+    <ClCompile Include="src\mesh.cpp" />
+    <ClCompile Include="src\meshfactory.cpp" />
     <ClCompile Include="src\skybox.cpp" />
     <ClCompile Include="src\engine.cpp" />
     <ClCompile Include="src\errorhandling.cpp" />
@@ -81,32 +74,36 @@
   </ItemGroup>
   <ItemGroup>
     <CopyFileToFolders Include="dependencies\glew\bin\Release\x64\glew32.dll">
-      <DeploymentContent>false</DeploymentContent>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='release|x64'">false</ExcludedFromBuild>
-      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='release|x64'">true</DeploymentContent>
+      <ExcludedFromBuild>false</ExcludedFromBuild>
+      <DeploymentContent>true</DeploymentContent>
       <FileType>Document</FileType>
     </CopyFileToFolders>
     <CopyFileToFolders Include="dependencies\glfw\lib-vc2019\glfw3.dll">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='release|x64'">false</ExcludedFromBuild>
-      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='release|x64'">true</DeploymentContent>
+      <ExcludedFromBuild>false</ExcludedFromBuild>
+      <DeploymentContent>true</DeploymentContent>
       <FileType>Document</FileType>
     </CopyFileToFolders>
     <CopyFileToFolders Include="dependencies\assimp\lib\assimp-vc142-mt.dll">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='release|x64'">false</ExcludedFromBuild>
-      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='release|x64'">true</DeploymentContent>
       <FileType>Document</FileType>
+      <ExcludedFromBuild>false</ExcludedFromBuild>
+      <DeploymentContent>true</DeploymentContent>
     </CopyFileToFolders>
     <None Include="imgui.ini" />
     <None Include="shaders\bloom_blend.frag" />
     <None Include="shaders\bloom_separation.frag" />
     <None Include="shaders\blur_horizontal.frag" />
     <None Include="shaders\blur_vertikal.frag" />
+    <None Include="shaders\brdfLUT.frag" />
+    <None Include="shaders\debug.frag" />
     <None Include="shaders\equirectToCubemap.frag" />
+    <None Include="shaders\equirectToCubemap.vert" />
     <None Include="shaders\GEO_fragment.frag" />
     <None Include="shaders\GEO_vertex.vert" />
+    <None Include="shaders\irradianceMapConvolution.frag" />
     <None Include="shaders\LIGHT_fragment.frag" />
     <None Include="shaders\LIGHT_vertex.vert" />
     <None Include="shaders\DOF.frag" />
+    <None Include="shaders\prefilterMapConvolution.frag" />
     <None Include="shaders\skybox.frag" />
     <None Include="shaders\skybox.vert" />
   </ItemGroup>
@@ -117,28 +114,6 @@
     <Content Include="shaders\**\*.*">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="dependencies\glew\*.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="dependencies\glfw\*.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="shaders\brdfLUT.frag" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="shaders\debug.frag">
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='release|x64'">Geometry</ShaderType>
-      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='release|x64'">4.0</ShaderModel>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='debug|Win32'">Geometry</ShaderType>
-      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='debug|Win32'">4.0</ShaderModel>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='debug|x64'">Geometry</ShaderType>
-      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='debug|x64'">4.0</ShaderModel>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='release|Win32'">Geometry</ShaderType>
-      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='release|Win32'">4.0</ShaderModel>
-      <FileType>Document</FileType>
-    </None>
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
