Started Material System

--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -19,7 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\model.cpp" />
+    <ClCompile Include="src\material.cpp" />
+    <ClCompile Include="src\old_model.cpp" />
     <ClCompile Include="src\imgui\imgui.cpp" />
     <ClCompile Include="src\imgui\imgui_demo.cpp" />
     <ClCompile Include="src\imgui\imgui_draw.cpp" />
@@ -27,8 +28,10 @@
     <ClCompile Include="src\imgui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="src\imgui\imgui_tables.cpp" />
     <ClCompile Include="src\imgui\imgui_widgets.cpp" />
-    <ClCompile Include="src\mesh.cpp" />
+    <ClCompile Include="src\old_mesh.cpp" />
     <ClCompile Include="src\meshfactory.cpp" />
+    <ClCompile Include="src\mesh.cpp" />
+    <ClCompile Include="src\model.cpp" />
     <ClCompile Include="src\skybox.cpp" />
     <ClCompile Include="src\engine.cpp" />
     <ClCompile Include="src\errorhandling.cpp" />
@@ -44,8 +47,9 @@
     <ClCompile Include="src\texture.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\model.h" />
-    <ClInclude Include="src\mesh.h" />
+    <ClInclude Include="src\material.h" />
+    <ClInclude Include="src\old_model.h" />
+    <ClInclude Include="src\old_mesh.h" />
     <ClInclude Include="src\meshfactory.h" />
     <ClInclude Include="src\imgui\imconfig.h" />
     <ClInclude Include="src\imgui\imgui.h" />
@@ -55,6 +59,8 @@
     <ClInclude Include="src\imgui\imstb_rectpack.h" />
     <ClInclude Include="src\imgui\imstb_textedit.h" />
     <ClInclude Include="src\imgui\imstb_truetype.h" />
+    <ClInclude Include="src\mesh.h" />
+    <ClInclude Include="src\model.h" />
     <ClInclude Include="src\skybox.h" />
     <ClInclude Include="src\drawable.h" />
     <ClInclude Include="src\engine.h" />
