--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -112,6 +112,7 @@
     <None Include="shaders\LIGHT_vertex.vert" />
     <None Include="shaders\DOF.frag" />
     <None Include="shaders\prefilterMapConvolution.frag" />
+    <None Include="shaders\ScreenSpaceReflections.frag" />
     <None Include="shaders\skybox.frag" />
     <None Include="shaders\skybox.vert" />
   </ItemGroup>
