--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -112,6 +112,7 @@
     <None Include="shaders\ScreenSpaceReflections.frag" />
     <None Include="shaders\skybox.frag" />
     <None Include="shaders\skybox.vert" />
+    <None Include="shaders\SSAO.frag" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets\**\*.*">
