--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -85,6 +85,7 @@
       <DeploymentContent>true</DeploymentContent>
     </CopyFileToFolders>
     <None Include="imgui.ini" />
+    <None Include="shaders\alternative_bloom.frag" />
     <None Include="shaders\bloom_blend.frag" />
     <None Include="shaders\bloom_separation.frag" />
     <None Include="shaders\blur_horizontal.frag" />
