--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -39,6 +39,7 @@
     <ClCompile Include="src\texture.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\constants.h" />
     <ClInclude Include="src\light.h" />
     <ClInclude Include="src\postprocess.h" />
     <ClInclude Include="src\material.h" />
